--- a/build.gradle
+++ b/build.gradle
@@ -4,11 +4,15 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven {
+            url 'https://maven.fabric.io/public'
+        }
         
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.2'
         classpath 'com.google.gms:google-services:4.2.0'
+        classpath 'io.fabric.tools:gradle:1.28.1'
         
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -17,11 +21,10 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
         jcenter()
-        //Für die Navigationsleiste
+        google()
         maven { url "https://jitpack.io" }
-        maven { url "https://maven.google.com" }
+        maven { url "https://dl.bintray.com/drummer-aidan/maven" }
     }
 }
 
