--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,7 @@
         <activity android:name=".Home.ChatNotificationActivity" />
         <activity android:name=".Login.RegisterActivity"/>
         <activity android:name=".MainActivity" />
+        <activity android:name=".Share.NextActivity"/>
         <activity android:name=".Home.ProfileActivity" />
         <activity android:name=".Home.HomeActivity"/>
         <activity android:name=".Login.LoginActivity"
