--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.example.uiaplycation"
+        applicationId "com.bbinkconnect.bbinktattoo"
         minSdkVersion 26
         targetSdkVersion 28
         versionCode 1
@@ -16,7 +16,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
         customDebugType {
-            debuggable true
+            debuggable false
 
         }
     }
