--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,16 +10,21 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+    
+    
+    
     buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-        customDebugType {
-            debuggable true
-
-        }
-    }
+release {
+    shrinkResources false
+    debuggable true
+    minifyEnabled true
+    proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+}
+debug {
+    shrinkResources false
+    minifyEnabled true
+    proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+}
 }
 
 dependencies {
