--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,13 +6,18 @@ android {
         applicationId "com.bbinkconnect.bbinktattoo"
         minSdkVersion 26
         targetSdkVersion 28
-        versionCode 2
+        versionCode 3
         versionName "1.3"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
         release {
+            lintOptions {
+                disable 'MissingTranslation'
+                checkReleaseBuilds false
+                abortOnError false
+            }
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
