--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,14 +64,13 @@
            </intent-filter>
        </service>
 
-       <service
-           android:name=".notifications.MyFirebaseIdService"
-           android:enabled="true"
-           android:exported="true">
-           <intent-filter>
-               <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
-           </intent-filter>
-       </service>
+        <service android:name=".notifications.MyFirebaseIdService"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
+            </intent-filter>
+        </service>
 
    </application>
 
